# ai-knowledge-base-assistant

./: .env  README.md  pyproject.toml
app/: app_gradio.py
database/: create_db.py
embedding/: call_embedding.py
llm/: langchain_llm.py  ollama_llm.py  openai_llm.py
qa_chain/: Chat_QA_chain_self.py  QA_chain_self.py  get_vectordb.py  model_to_llm.py
rag_base/database/: create_db.py
rag_base/embedding/: call_embedding.py
rag_base/llm/: langchain_llm.py  local_llm.py  openai_llm.py
rag_base/qa_chain/: model_to_llm.py
serve/: run_gradio.py
